# libshell

./: CMakeLists.txt
example/: StaticSolve.h  main.cpp
include/: BilayerStVKMaterial.h  RestState.h  TensionFieldStVKMaterial.h
include/libshell/: BilayerStVKMaterial.h  ElasticShell.h  MaterialModel.h  MeshConnectivity.h  MidedgeAngleSinFormulation.h  MidedgeAngleTanFormulation.h  MidedgeAverageFormulation.h  NeoHookeanMaterial.h  RestState.h  StVKMaterial.h
src/: ElasticShell.cpp  GeometryDerivatives.cpp  GeometryDerivatives.h  MeshConnectivity.cpp
src/MaterialModel/: BilayerStVKMaterial.cpp  NeoHookeanMaterial.cpp  StVKMaterial.cpp  TensionFieldStVKMaterial.cpp
src/SecondFundamentalForm/: MidedgeAngleSinFormulation.cpp  MidedgeAngleTanFormulation.cpp  MidedgeAverageFormulation.cpp
tests/: main.cpp
